--- a/typography.css
+++ b/typography.css
@@ -94,6 +94,12 @@
    line-height: 1.4;
 }
 
+.body {
+   font-size: calc(var(--type-base) * var(--level-One));
+   line-height: 1.5;
+}
+
+
 .body-small {
    font-size: calc(var(--type-base) * var(--level-min-one));
 }
