--- a/style.css
+++ b/style.css
@@ -3,9 +3,85 @@
 body {
    background-color: #050506;
    color: #8A8A8D;
-   font-family: "Relative-book", "sans-serif";
-   font-weight: 400;
+   font-family: "Relative-Book", "sans-serif";
 }
+
+/*/////////////// Type ////////////////*/
+
+/* font loading */
+@font-face {
+   font-family: "Relative-Bold";
+   src: url("fonts/Relative-Bold-Web.woff2") format("woff2"),
+   url("fonts/Relative-Bold-Web.woff") format("woff");
+}
+@font-face {
+   font-family: "Relative-Book";
+   src: url("fonts/Relative-Book-Web.woff2") format("woff2"),
+   url("fonts/Relative-Book-Web.woff") format("woff");
+}
+@font-face {
+   font-family: "Relative-Faux";
+   src: url("fonts/Relative-Faux-Web.woff2") format("woff2"),
+   url("fonts/Relative-Faux-Web.woff") format("woff");
+}
+/* end of: font loading */
+
+
+/* font styling */
+.hero {
+   line-height: 1.2;
+   font-family: "Relative-Faux", "sans-serif";
+   color: #FFF;
+}
+
+.h1, .h2, .h3 {
+   line-height: 1.25;
+}
+
+.h4 {
+   line-height: 1.4;
+}
+
+.body {
+   line-height: 1.5;
+}
+
+.body-small {
+   line-height: 1.4;
+}
+
+.body-chart {
+   line-height: 1.2;
+}
+/* end of: font styling */
+
+
+/* fancy pink underline */
+strong {
+   border-bottom: 5px solid #FF375F;
+}
+
+@media (min-width: 720px) {
+   strong {
+      border-bottom: 6px solid #FF375F;
+   }
+}
+
+@media (min-width: 1080px) {
+   strong {
+      border-bottom: 9px solid #FF375F;
+   }
+}
+
+@media (min-width: 1440px) {
+   strong {
+      border-bottom: 13px solid #FF375F;
+   }
+}
+/* end of: fancy pink underline */
+
+
+/*/////////////// Layout ////////////////*/
 
 .nav-block {
    align-items: center;
