--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -1,9 +1,19 @@
+html {
+   box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
 .control-panel {
    color: #8A8A8D;
    font-family: 'Roboto', sans-serif;
+
 }
 
-.cp-background {
+.cp-block {
    width: 300px;
    height: 100%;
    background-color: #3D3D41;
@@ -12,7 +22,7 @@
    right: 0;
    top: 0;
    z-index: 2;
-   box-shadow: -12px 0px 60px #222;
+   transform: translateX(300px);
    transition: all 0.5s ease;
 }
 
@@ -29,26 +39,41 @@
    transition: all 0.3s ease;
 }
 
+.cp-button img {
+   padding-top: 1.3rem;
+   padding-left: 0.25rem;
+   transform: rotate(-45deg);
+}
+
 .cp-button:hover {
    transform: scale(1.1) rotate(45deg);
 }
 
+/* Type */
 .control-panel h1 {
    color: #CACACA;
-   font-size: 24px;
+   font-size: 20px;
    margin-bottom: 0.5rem;
-}
-
-hr {
-   margin-bottom: 1rem;
 }
 
 .control-panel h4 {
    margin-bottom: 0.5rem;
+   font-size: 16px;
 }
 
-.control-panel p {
+.control-panel p, input {
+   font-size: 14px;
    line-height: 1.4;
+}
+
+hr {
+   margin-bottom: 1rem;
+   border-color: #8A8A8D;
+}
+
+
+.cp-panel .cp-form-block{
+   margin-top: 2rem;
 }
 
 .cp-panel .cp-form-block:first-child {
@@ -61,23 +86,39 @@ hr {
 }
 
 .cp-form-block p {
-   margin-top: 0.25rem;
+   margin-top: 0.3rem;
+}
+
+.cp-print-block p {
+   color: #CACACA;
 }
 
 .control-panel input {
-   font-size: 15px;
-   color: #585858;
+   color: #8A8A8D;
    background-color: #3D3D41;
-   margin-top: 0.25rem;
-   height: 25px;
-   width: 35px;
+   margin-top: 0.2rem;
+   height: 22px;
+   width: 40px;
    display: block;
-   border-left: 0px;
-   border-top: 0px;
-   border-right: 0px;
+   border-left: 0;
+   border-top: 0;
+   border-right: 0;
    border-color: #8A8A8D;
+   text-align: right;
+}
+
+.control-panel input:focus {
+   border-color: #CACACA;
+   color: #CACACA;
+   outline: none;
 }
 
 .cp-input-block input:first-child {
    margin-top: 0;
+}
+
+/* js classes */
+.cp-shift {
+   transform: translateX(0px);
+   box-shadow: -12px 0px 60px #000;
 }
