--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -66,6 +66,11 @@ html {
    line-height: 1.4;
 }
 
+.emphasis {
+   color: #CACACA;
+   font-weight: 400;
+}
+
 hr {
    margin-bottom: 1rem;
    border-color: #8A8A8D;
