--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -23,7 +23,7 @@ html {
    top: 0;
    z-index: 2;
    transform: translateX(300px);
-   transition: all 0.5s ease;
+   transition: all 0.4s ease;
 }
 
 .cp-button {
@@ -61,10 +61,11 @@ html {
    font-size: 16px;
 }
 
-.control-panel p, input {
+.control-panel p, input, output {
    font-size: 14px;
    line-height: 1.4;
 }
+
 
 .emphasis {
    color: #CACACA;
@@ -91,14 +92,14 @@ hr {
 }
 
 .cp-form-block p {
-   margin-top: 0.3rem;
+   margin-top: 0.36rem;
 }
 
-.cp-print-block p {
+/* .cp-print-block p {
    color: #CACACA;
-}
+} */
 
-.control-panel input {
+.control-panel input, output {
    color: #8A8A8D;
    background-color: #3D3D41;
    margin-top: 0.2rem;
@@ -117,6 +118,12 @@ hr {
    color: #CACACA;
    outline: none;
 }
+/*
+output {
+   text-align: right;
+   width: 40px;
+   height: 22px;
+} */
 
 .cp-input-block input:first-child {
    margin-top: 0;
