--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* Set-up */
 body {
-   background-color: #050506;
+   background-color: #FFF;
    color: #8A8A8D;
    font-family: "Relative-Book", "sans-serif";
 }
@@ -56,36 +56,7 @@ body {
 /* end of: font styling */
 
 
-/* fancy pink underline */
-strong {
-   border-bottom: 5px solid #FF375F;
-}
-
-@media (min-width: 720px) {
-   strong {
-      border-bottom: 6px solid #FF375F;
-   }
-}
-
-@media (min-width: 1080px) {
-   strong {
-      border-bottom: 9px solid #FF375F;
-   }
-}
-
-@media (min-width: 1440px) {
-   strong {
-      border-bottom: 13px solid #FF375F;
-   }
-}
-/* end of: fancy pink underline */
-
-
 /*/////////////// Layout ////////////////*/
-
-.nav-block {
-   align-items: center;
-}
 
 .container {
    padding: 0 1rem;
@@ -111,108 +82,4 @@ strong {
 
 .container-flex {
    display: flex;
-}
-
-/* nav */
-.nav-block {
-   background-color: #3D3D41;
-   height: 45px;
-}
-
-@media (min-width: 450px) {
-   .nav-block {
-      background-color: #3D3D41;
-      height: 45px;
-   }
-}
-
-/* Type-block */
-
-   /* region-small */
-.type-block {
-   flex-direction: column;
-   justify-content: space-between;
-   padding: 2rem 0;
-   height: 85vh;
-   width: 100%;
-}
-
-.type-block .hero {
-   margin-bottom: 2rem;
-}
-
-.type-block .h1, .h2, .h3, .h4 {
-   margin-bottom: 1rem;
-}
-
-.type-block .body, .body-small, .body-chart {
-   margin-bottom: 0.5rem;
-}
-
-.type-block .bread-crumb {
-   margin-bottom: 2.5rem;
-}
-
-/* region medium */
-@media (min-width: 720px) {
-   .type-block {
-      width: 90%;
-      padding: 3rem 0;
-   }
-   .type-block .hero {
-      margin-bottom: 3rem;
-   }
-
-   .type-block .h1, .h2, .h3, .h4 {
-      margin-bottom: 1.5rem;
-   }
-   .type-block .bread-crumb {
-      margin-bottom: 3rem;
-}
-
-/* region large */
-@media (min-width: 1080px) {
-   .type-block {
-      width: 70%;
-   }
-
-   .type-block .hero {
-      margin-bottom: 3.5rem;
-   }
-
-   .type-block .h1, .h2, .h3, .h4 {
-      margin-bottom: 2rem;
-   }
-
-   .type-block .body, .body-small, .body-chart {
-      margin-bottom: 0.75rem;
-   }
-   .type-block .bread-crumb {
-      margin-bottom: 3.5rem;
-}
-
-/* region xtra-large */
-@media (min-width: 1440px) {
-   .type-block {
-      width: 85%;
-   }
-
-   .type-block .hero {
-      margin-bottom: 3.5rem;
-   }
-
-   .type-block .h1, .h2, .h3, .h4 {
-      margin-bottom: 2.5rem;
-   }
-
-   .type-block .body, .body-small, .body-chart {
-      margin-bottom: 1rem;
-   }
-}
-
-/* region xtra-large */
-@media (min-width: 1850px) {
-   .type-block {
-      width: 65%;
-   }
 }
