--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -8,8 +8,8 @@ html {
 
 
 .control-panel {
-   color: #8A8A8D;
-   font-family: 'Roboto', sans-serif;
+   color: #222;
+   font-family: 'Apercu', sans-serif;
 
 }
 
@@ -51,9 +51,9 @@ html {
 
 /* Type */
 .control-panel h1 {
-   color: #CACACA;
-   font-size: 20px;
-   margin-bottom: 0.5rem;
+   font-family: "GT Sectra Bold";
+   font-size: 24px;
+   margin-bottom: 0.75rem;
 }
 
 .control-panel h4 {
@@ -72,9 +72,10 @@ html {
    font-weight: 400;
 }
 
-hr {
+.control-panel hr {
    margin-bottom: 1rem;
-   border-color: #8A8A8D;
+   border-color: #CCC;
+   border-width: 1px;
 }
 
 
@@ -100,8 +101,8 @@ hr {
 } */
 
 .control-panel input, output {
-   color: #8A8A8D;
-   background-color: #3D3D41;
+   color: #222;
+   background-color: #FFF;
    margin-top: 0.2rem;
    height: 22px;
    width: 40px;
@@ -109,13 +110,13 @@ hr {
    border-left: 0;
    border-top: 0;
    border-right: 0;
-   border-color: #8A8A8D;
+   border-color: #CCC;
    text-align: right;
 }
 
 .control-panel input:focus {
-   border-color: #CACACA;
-   color: #CACACA;
+   border-color: #222;
+   color: #222;
    outline: none;
 }
 /*
@@ -132,5 +133,5 @@ output {
 /* js classes */
 .cp-shift {
    transform: translateX(0px);
-   box-shadow: -12px 0px 60px #DDD;
+   box-shadow: -6px 0px 35px #EEE;
 }
