--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
    font-family: "GT-Sectra", "serif";
 }
 
-.h4, .body, .body-small, .body-x-small {
+.body, .body-small, .body-x-small {
    font-family: "Apercu", "sans-serif";
 }
 
