--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -107,14 +107,27 @@ html {
 .cp-break-wrapper svg {
    height: 18px;
 }
+.cp-break-wrapper input {
+   margin: 0 3px;
+}
 
 .cp-form-block .break-title {
    margin-bottom: 1rem;
 }
 
-.cp-break-wrapper svg path {
+.cp-break-wrapper svg path, line {
+   stroke: #222;
    fill: #222;
 }
+   /* adjust spacing on second row */
+.cp-break-wrapper .space-left {
+   margin-left: 42px;
+}
+
+.cp-break-wrapper {
+   margin-bottom: 0.25rem;
+}
+
 
 .control-panel input, output {
    color: #222;
