--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -172,22 +172,22 @@ html {
    z-index: -1;
 }
 
-#break-mark-1, #break-mark-2, #break-mark-3, #break-mark-4 {
+#break-line-1, #break-line-2, #break-line-3, #break-line-4 {
    border-right: 1px dashed #CCC;
    height: 100%;
 
 }
 
-#break-mark-1 {
+#break-line-1 {
    min-width: 517px;
 }
-#break-mark-2 {
+#break-line-2 {
    min-width: calc(835px - 517px);
 }
-#break-mark-3 {
+#break-line-3 {
    min-width: calc(1355px - 835px);
 }
-#break-mark-4 {
+#break-line-4 {
    min-width: calc(2193px - 1355px);
 }
 
