--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 /* line-height */
 .hero {
    line-height: 1.2;
-   /* margin-bottom: 2rem */
+   margin-bottom: 2rem
 }
 .h1 {line-height: 1.4;}
 .h2 {line-height: 1.55;}
